fixed (kinda) translate3d bug on smaller screen widths

--- a/src/App.scss
+++ b/src/App.scss
@@ -143,7 +143,7 @@ html {
 
     @media only screen and (max-width: 600px) {
         .slider {
-            width: 95vw;
+            width: 100vw;
             margin-left: -0.5rem;
             margin-top: -3rem;
             margin-bottom: -4rem;
