--- a/src/styles/Carousel/slick.scss
+++ b/src/styles/Carousel/slick.scss
@@ -14,6 +14,13 @@
     touch-action: pan-y;
     -webkit-tap-highlight-color: transparent;
 }
+
+@media only screen and (max-width: 1550px) {
+    .slick-slider {
+
+    }
+}
+
 .slick-list {
     position: relative;
     overflow: hidden;
@@ -30,8 +37,10 @@
         cursor: hand;
     }
 }
+
 .slick-slider .slick-track,
 .slick-slider .slick-list {
+
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
     -ms-transform: translate3d(0, 0, 0);
@@ -39,13 +48,14 @@
     transform: translate3d(0, 0, 0);
 }
 
+
 .slick-track {
     position: relative;
     left: 0;
     top: 0;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0;
+    margin-right: 0;
 
     &:before,
     &:after {
@@ -61,21 +71,24 @@
         visibility: hidden;
     }
 }
+
 .slick-slide {
     float: left;
     height: 100%;
     min-height: 1px;
+
     [dir="rtl"] & {
         float: right;
     }
+
     img {
         display: block;
     }
+
     &.slick-loading img {
         display: none;
     }
 
-    display: none;
 
     &.dragging img {
         pointer-events: none;
@@ -95,6 +108,7 @@
         border: 1px solid transparent;
     }
 }
+
 .slick-arrow.slick-hidden {
     display: none;
 }
